--- a/package.json
+++ b/package.json
@@ -8,21 +8,26 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/multer": "^1.4.12",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.3",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "npm": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.17.19",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
